remove chronicle, change version, fix builds